--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ SpaceRepair/Library/
 SpaceRepair/Logs/
 SpaceRepair/Temp/
 SpaceRepair/obj/
+Space Repair Project/Library/
+Space Repair Project/Temp/
