small changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ SpaceRepair/obj/
 Space Repair Project/Library/
 Space Repair Project/Temp/
 Space Repair Project/obj/
+Space Repair Project/Assets/theTeam.png
